<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProfileTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">NAME: Mike</string>
    <string name="age">AGE: XX</string>
    <string name="gender">GENDER: Male</string>
    <string name="photo">photo</string>
    <string name="phone">PHONE: XXX-XXXX</string>
    <string name="heart">Heart rate</string>
    <string name="pedo">Pedometer</string>
    <string name="loca">Location</string>
    <string name="pos">Posture</string>
    <string name="title_activity_heartrate">Heartrate</string>
    <string name="heartsub">ECG-Heart rate</string>
    <string name="returnheart">Return</string>
    <string name="title_activity_pedometer">Pedometer</string>
    <string name="pedosub">Pedometer-step detection</string>
    <string name="returnpedo">Return</string>
    <string name="title_activity_location">Location</string>
    <string name="locasub">Location-position system</string>
    <string name="returnloca">Return</string>
    <string name="title_activity_posture">Posture</string>
    <string name="possub">Posture system</string>
    <string name="returnpos">Return</string>

</resources>
