<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.Haiyue.profiletest.MainActivity" >

    <ImageView
        android:id="@+id/photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/photo"
        android:src="@drawable/photo" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/photo"
        android:layout_toRightOf="@+id/photo"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:text="@string/gender"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gender"
        android:layout_toRightOf="@+id/photo"
        android:text="@string/age"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/heart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/photo"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="79dp"
        android:text="@string/heart" 
        android:onClick="heart_rate"
        />

    <Button
        android:id="@+id/pedo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/heart"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="22dp"
        android:text="@string/pedo" />

    <Button
        android:id="@+id/pos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/pedo"
        android:layout_alignBottom="@+id/pedo"
        android:layout_alignRight="@+id/loca"
        android:text="@string/pos" />

    <Button
        android:id="@+id/loca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/heart"
        android:layout_alignBottom="@+id/heart"
        android:layout_alignRight="@+id/gender"
        android:text="@string/loca" />

</RelativeLayout>